fix invisibile

--- a/assets/css/results-page.css
+++ b/assets/css/results-page.css
@@ -19,7 +19,7 @@ body {
   margin-left: 80px;
   margin-right: 80px;
   margin-top: 30px;
-  /* display: none; */
+  display: none;
 }
 
 .logo {
